# bstream

./: .gitignore  .pylintrc  MANIFEST.in  README.md  pyproject.toml  setup.py  xmake.lua
.github/workflows/: build.yml  release.yml
bindings/: bstream.cpp
bstream/: _bstream.pyi
tests/: test.py
